Closed Bug 409375 Opened 17 years ago Closed 16 years ago

English text runs reversed when setting plaintext mail message to RTL direction

Categories

(Core :: Layout: Text and Fonts, defect, P1)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: eyalroz1, Assigned: smontagu)

References

()

Details

(Keywords: regression, rtl, testcase)

Attachments

(3 files, 2 obsolete files)

Using SM trunk with BiDi Mail UI 0.8 (which does _not_ reverse text runs, it only sets the direction and encoding, and in this case does not set iso-8859).

I've noticed in recent weeks (after the period in which bug 387564 meant crashes when setting RTL, i.e. the period between 2007-10-19 and 2007-12-06) that for some plain text messages with both English and Hebrew text, setting the direction to RTL reverses the English text, i.e.

TXET WERBEH
English text blah blah

(which is the ok way to see this text in LTR)

becomes

           TXET WERBEH
halb halb txet hsilgnE

instead of 

           TXET WERBEH
English text blah blah

changing back to LTR, the problem goes away.
Whiteboard: dupeme
Severity: normal → major
Flags: blocking1.9?
FYI, I couldn't reproduce this on data:text/plain,English ועברית after Switch Page Direction (utf-8 encoding).
Reproduction instructions:

- Create a new profile 
- Start Seamonkey with the new profile
- Install BiDi Mail UI 0.8 from 
  http://downloads.mozdev.org/bidiui/latest/bidimailui_suite.xpi
- Exit Seamonkey
- Put the mbox file in attachment 294259 [details] in the new profile's 
  Local Folders directory
- Start Seamonkey
- Get yourself into mailnews somehow (why cant I skip creating 
  an account? :-( ...)
- Open the message in the folder you've added

That should do it.
Oh, note of course that the first line of LTR text in the message doesn't get reversed, while the second line does.
I can reproduce this in Firefox using data:text/plain,%0aEnglish%0a%0a (with bisi.browser.ui on, using "Switch Page Direction").
The testcase worked correctly until 2007-08-15. Starting at 2007-08-16 (probably due to the checkin for bug 385270), it crashed, until 2007-09-27. Since 2007-09-28 (probably bug 393906), it no longer crashes, but reverses the text as described in the summary.
Blocks: 385270, 393906
Keywords: regression, testcase
(In reply to comment #6)
> Starting at 2007-08-16
> (probably due to the checkin for bug 385270), it crashed, until 2007-09-27.

This crash was reported as bug 394820.
Attached patch Possible patch (obsolete) — Splinter Review
This is really a correction to the patch for bug 406675. That didn't take into account that |frame| before entering EnsureBidiContinuation isn't always the frame which the continuation frame will be created from.

This patch fixes this bug, but it has effects on bug 409513 which I haven't fully analysed, and it's probably better to fix both together.
Assignee: nobody → smontagu
Status: NEW → ASSIGNED
Blocks: 409513
Blocks: 410383
Blocks: 410967
Flags: blocking1.9? → blocking1.9+
Priority: -- → P4
Priority: P4 → P1
Attached patch Better patch (obsolete) — Splinter Review
This version removes the assertion in bug 409513 without causing any new ones.
Attachment #294538 - Attachment is obsolete: true
Attachment #300163 - Flags: superreview?(roc)
Attachment #300163 - Flags: review?(roc)
Attachment #300163 - Attachment is obsolete: true
Attachment #300163 - Flags: superreview?(roc)
Attachment #300163 - Flags: review?(roc)
Attachment #300194 - Flags: superreview?(roc)
Attachment #300194 - Flags: review?(roc)
Attachment #300194 - Flags: superreview?(roc)
Attachment #300194 - Flags: superreview+
Attachment #300194 - Flags: review?(roc)
Attachment #300194 - Flags: review+
Checked in with reftest based on comment 5
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Mass-assigning the new rtl keyword to RTL-related (see bug 349193).
Keywords: rtl
Component: Layout: BiDi Hebrew & Arabic → Layout: Text
QA Contact: layout.bidi → layout.fonts-and-text
Whiteboard: dupeme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: